Got carried away here... - AIFF support (had to add code to an open-source library to do it right)   - The fact checkstyle forces me to use "Aiff" instead of "AIFF" physically hurts me - Recently played list   - Gets lost when you exit but that's fine   - Capped at 100 songs to save RAM, since I'm caching the ENTIRE Audio data structure instead of just the filename (should be fine, that's 5 hours of music) - Skipping a song is now possible, as is going a song back (that's why I implemented the recently played list) - Audio conversions are implemented!   - Currently only converts to WAV files   - Program still can't write ID3 data, but that's irrelevant while I can't encode to a format that doesn't support it